# VKratse

./: README.md
VKratseClient/: .gitignore  CMakeLists.txt
VKratseClient/include/: authorization_dialog.h  chats_widget.h  client.h  mainwindow.h  message_type.h  new_chat_dialog.h  registration_dialog.h  settings_widget.h  user.h
VKratseClient/src/: authorization_dialog.cpp  chats_widget.cpp  client.cpp  main.cpp  mainwindow.cpp  new_chat_dialog.cpp  registration_dialog.cpp  settings_widget.cpp  user.cpp
VKratseServer/: CMakeLists.txt  conanfile.txt
VKratseServer/include/: db_connection.h  message_type.h  server.h  worker.h
VKratseServer/src/: main.cpp  server.cpp  worker.cpp
